# templatebot

./: CMakeLists.txt  compiles.txt
include/mizu/: Database.h  cat_command.h  command_handlers.h  command_info.h  command_template.h  console.h  help_command.h  ping_command.h  slash_commands.h
src/: Database.cpp  cat_command.cpp  command_handlers.cpp  command_template.cpp  console.cpp  help_command.cpp  main.cpp  ping_command.cpp  slash_commands.cpp
